--- a/css/css.css
+++ b/css/css.css
@@ -234,7 +234,7 @@ tr{
     margin-right: auto;
     margin-top: -40px;
   }
-  #ball{
+  .ball{
     max-width: 120px;
     margin-left: auto;
     margin-right: auto;
@@ -268,7 +268,7 @@ tr{
   #icon{
     display: none;
   }
-  #ball{
+  .ball{
     display: none;
   }
 }
