--- a/css/css.css
+++ b/css/css.css
@@ -104,7 +104,6 @@ td{
     
 table{
   border: 5px solid yellow;
-  border-radius: 50px;
   margin-left: auto;
   margin-right: auto;
   }
@@ -261,10 +260,25 @@ tr:hover{
   .nav_links a{
     margin: 60px;
   }
+  #container1{
+    background-image: url('../images/stadium2.jpg');
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  table{
+    background-color: #0a0a0a;
+  }
 }
 @media screen and (prefers-reduced-motion: reduce){
   #icon{
     animation: none;
+  }
+}
+@media screen and (prefers-reduced-motion: reduce){
+  #container1{
+    background-attachment: initial;
   }
 }
 @media screen and (max-width: 1100px){
